--- a/cv.html
+++ b/cv.html
@@ -12,7 +12,7 @@
             <h1>Ruby Chaudhary</h1>
             <p>Kathmandu, Nepal</p>
             <p>📞 9803404215 | ✉️ <a href="mailto:xxx@gmail.com">ruby55879@gmail.com</a> | <a href="https://www.linkedin.com/feed/" target="_blank">LinkedIn</a> | 
-                <a href="https://github.com/chauruby" target="_blank">GitHub</a></p>
+                <a href="https://github.com/boseeok" target="_blank">GitHub</a></p>
         </header>
 
         <section>
@@ -65,7 +65,7 @@
         <section>
             <h2>Skills</h2>
             <ul>
-                <li><strong>Technical Skills:</strong> C, C++, HTML, CSS, JavaScript, SQL, Data Structures and Algorithms, GitHub</li>
+                <li><strong>Technical Skills:</strong> C, C++, HTML, CSS, JavaScript, SQL, GitHub, Canva, Figma</li>
                 <li><strong>Soft Skills:</strong> Communication, Leadership, Teamwork</li>
             </ul>
         </section>
