--- a/cv.html
+++ b/cv.html
@@ -51,6 +51,7 @@
                 <li>Operating Systems</li>
                 <li>Web Development</li>
                 <li>Statistics and Mathematics</li>
+                <li>Figma</li>
             </ul>
         </section>
 
@@ -65,22 +66,22 @@
         <section>
             <h2>Skills</h2>
             <ul>
-                <li><strong>Technical Skills:</strong> C, C++, HTML, CSS, JavaScript, SQL, GitHub, Canva, Figma</li>
+                <li><strong>Technical Skills:</strong> C, HTML, CSS, JavaScript, SQL, GitHub, Canva, Figma</li>
                 <li><strong>Soft Skills:</strong> Communication, Leadership, Teamwork</li>
             </ul>
         </section>
 
         <section>
-            <h2>Coding Platforms</h2>
+            <h2> Platforms</h2>
             <ul>
-                <li>Solved 5+ problems on <a href="#">Vs Code</a></li>
+                <li>Solved 5+ problems on <a href="#">Vs Code, Canva and Figma </a></li>
             </ul>
         </section>
 
         <section>
             <h2>Certifications</h2>
             <ul>
-                <li>Udemy (HTML)</li>
+                <li>Udemy (Web Development and Figma)</li>
             </ul>
         </section>
     </div>
